--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="Dictionary app" content="Dictionary web app created using React" />
+  <meta name="English dictionary app" content="English dictionary web app created using React" />
 
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Dictionary App using React</title>
+  <title>English Dictionary App using React</title>
 </head>
 
 <body>
