--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <meta name="English dictionary app" content="English dictionary web app created using React" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap" rel="stylesheet">
 
   <!--
       manifest.json provides metadata used when your web app is installed on a
